13657
The following example works with 2.7.0 but results in an
error with 2.7.1 and the current SVN version:

{code}
class ann extends Annotation
object A {
  val x = new (Integer @ann)(2)
}
{code}

With 2.7.1 I get:

{code}
Annots2.scala:3: error: class type required but java.lang.Integer @ann found
  val x = new (Integer @ann)(2)
                        ^
one error found
{code}

The example is based on bug SI-688.
I did not see any other changes for annotations between these compiler versions.
